--- a/shopee.html
+++ b/shopee.html
@@ -18,7 +18,7 @@
   <body>
     <div class="shopee">
       <div class="section13">
-        <img class="avatar-icon" alt="" src="./public/frame3@2x.png" />
+        <img class="avatar-icon" alt="" src="./public/shopee.png" />
 
         <div class="container20">
           <b class="title74">Shopee Indonesia </b>
